# orekvs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PERFORMANCE_REPORT.md  README.md  build.rs
.claude/: settings.local.json
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: ARCHITECTURE.md  BTreeEngine.md  LSMTreeEngine.md  LogEngine.md  PERFORMANCE_REPORT.md
examples/: analyze_trace.rs  profile_get.rs
proto/: kv.proto  replication.proto
src/: lib.rs  main.rs  server.rs
src/client/cli/: batch_delete.rs  batch_get.rs  batch_set.rs  metrics.rs  mod.rs  random_cas.rs  random_get.rs  random_set.rs  single.rs
src/engine/: benchmark.rs  cas.rs  log.rs  lsm_tree.rs  memory.rs  mod.rs  wal.rs
src/engine/btree/: benchmark.rs  buffer_pool.rs  freelist.rs  mod.rs  node.rs  page.rs  page_manager.rs  tests.rs  wal.rs
src/engine/lsm_tree/: benchmark.rs  block_cache.rs  bloom.rs  buffer_pool.rs  common_prefix_compression_index.rs  compaction.rs  composite_key.rs  direct_io.rs  flush.rs  manifest.rs  memtable.rs  metrics.rs  mmap.rs  mod.rs  recovery.rs  sstable.rs  tests.rs  wal.rs  wrapper.rs
src/engine/lsm_tree/sstable/: levels.rs  mod.rs  reader.rs  writer.rs
src/replication/: follower.rs  mod.rs  service.rs
src/server/: cli.rs  mod.rs
tests/: replication_test.rs
