[package]
name = "orelsm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-skiplist = "0.1"
lru = "0.12"
rand = "0.8"
rayon = "1.10"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
tonic-build = "0.12"
