[package]
name = "orekvs"
version = "0.1.0"
edition = "2024"

license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
crossbeam-skiplist = "0.1"
lru = "0.12"
memmap2 = "0.9"
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
prost = "0.13"
zstd = "0.13.3"
arc-swap = "1.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-tracy = { version = "0.11", optional = true }
tracing-chrome = { version = "0.7", optional = true }

[features]
default = []
tracy = ["tracing-tracy"]
chrome = ["tracing-chrome"]

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
tonic-build = "0.12"
